[tool.poetry]
name = "demo-pydeck-maps"
version = "0.1.0"
description = ""
authors = ["Dmitrii.Mashkov <dmitrii.mashkov@libertexgroup.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.9"
pydeck = "0.7.1"
streamlit = "1.10.0"
altair = "4.0"
geopandas = "^0.14.3"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
