[tool.poetry]
package-mode = false
name = "demo-pydeck-maps"
version = "0.1.0"
description = ""
authors = ["Dmitrii.Mashkov <dmitrii.mashkov@libertexgroup.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
altair = "4.0"
geopandas = "^0.14.3"
streamlit = "^1.45.0"
pydeck = "^0.9.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
